@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/Attic/ChangeLog,v 1.122 2007/05/23 10:29:12 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/Attic/ChangeLog,v 1.123 2007/05/29 06:26:35 ulm Exp $
+
+  29 May 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.0.990.ebuild,
+  emacs-cvs-22.0.9999-r10.ebuild, emacs-cvs-22.1.50.ebuild,
+  emacs-cvs-23.0.0-r6.ebuild:
+  Fix logic for USE=-motif. Variables in canonical order.
 
   23 May 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.0.990.ebuild,
   emacs-cvs-22.0.9999-r10.ebuild, emacs-cvs-22.1.50.ebuild,
